--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,10 @@
   <%= render 'layouts/shim' %>
 </head>
 <body>
-	<%= render 'layouts/header' %>
+  <%= render 'layouts/header' %>
   <div class="container">
     <%= yield %>
+    <%= render 'layouts/footer' %>
   </div>
 </body>
 </html>
