Write and run a test for site layout

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    The <a href="http://www.railstutorials.org/">Ruby on Rails Tuttorial</a>by <a href="http://www.mickaelhartl.com/">Mickael Hartl</a>
+    The <a href="http://www.railstutorials.org/">Ruby on Rails Tutorial </a>by <a href="http://www.mickaelhartl.com/">Mickael Hartl</a>
   </small>
   <nav>
     <ul>
